// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput renders a button that triggers the calendar 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 SMFjn FormField__FormFieldContentBox-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButton-sc-323bzc-0 kfaNv"
          id="dob"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 jncmfT"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 dyOQNl"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 hWJHOS"
            />
            Pick a date and call me Jim
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz"
    >
      <label
        class="StyledText-sc-1sadyjn-0 ZJQGZ"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 cwwoTn FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 foCyPH"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 bSUNRR"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 dyOQNl"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 hKDQOK"
            disabled=""
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 SMFjn FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 foCyPH"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 bSUNRR"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 dyOQNl"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 dZnGoz"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz"
    >
      <label
        class="StyledText-sc-1sadyjn-0 ZJQGZ"
        for="dob"
      >
        Date of birth
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 bmnpwp"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 SMFjn FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 foCyPH"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 bSUNRR"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 dyOQNl"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 dZnGoz"
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz"
    >
      <label
        class="StyledText-sc-1sadyjn-0 ZJQGZ"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 SMFjn FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 foCyPH"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 bSUNRR"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 dyOQNl"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 dZnGoz"
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz"
    >
      <label
        class="StyledText-sc-1sadyjn-0 ZJQGZ"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 HhzTD FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 foCyPH"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 bSUNRR"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 dyOQNl"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 dZnGoz"
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 fnpEr"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 iUQqn"
>
  <div
    class="sc-gKAaRy ezfMqp"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hcMLLM FormField__FormFieldBox-m9hood-0 ofKvz"
    >
      <label
        class="StyledText-sc-1sadyjn-0 ZJQGZ"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 SMFjn FormField__FormFieldContentBox-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 foCyPH"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 bSUNRR"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-ofa7kd-0 dyOQNl"
              viewBox="0 0 24 24"
            >
              <path
                d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 dZnGoz"
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 bTUvUa"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
